Fixes horizontal scroll bar in house details

--- a/resources/sass/partials/guest/_show.scss
+++ b/resources/sass/partials/guest/_show.scss
@@ -146,7 +146,6 @@
 
 
 #map-contact {
-    width: 100vw;
     min-height: 300px;
     background-color: $main_color;
 
